updated api, workspace.js, schema.sql
