# backend/api/openapi.yaml
@@ -48,6 +48,58 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    post:
+      description: Create new workspace
+      requestBody:
+        description: workspace to add
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Workspace'
+      responses:
+        401:
+          description: Unauthorised
+        201:
+          description: Workspace Create
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workspace'
+        400:
+          description: Unexpected properties
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    delete:
+      description: Delete a workspace
+      parameters:
+      - name: workspace
+        in: query
+        description: name of workspace
+        required: true
+        schema:
+          type: string
+      responses:
+        401:
+          description: Unauthorised
+        204:
+          description: Workspace Deleted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Workspaces'
+        404:
+          description: workspace not found
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
@@ -77,7 +129,14 @@ components:
     Workspace:
       type: object
       properties:
-        username:
+        name:
           type: string
-        onlineStatus:
-          type: string
+    
+  securitySchemes:
+    bearerAuth:            
+      type: http
+      scheme: bearer
+      bearerFormat: JWT    
+
+security:
+  - bearerAuth: []
